Fixed bootstrap col color error with dark mode

--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -46,7 +46,7 @@ a:hover{
 }
 
 .col{
-    background-color: var(--bg-color);
+    background-color: $sameAsBackground;
 }
 
 label {
