--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -1,6 +1,7 @@
 :root{
     --bg-color: #ececec;
     --text-color: #1f1f1f;
+    background-color: var(--bg-color);
     --brightShadow: rgba(255, 255, 255, 0.4);
     --dimShadow: rgba(0, 0, 0, 0.05);
     --highContrastBrightShadow: rgba(255, 255, 255, 0.7);
@@ -10,6 +11,7 @@
 [dark-mode="true"] {
     --bg-color: #1f1f1f;
     --text-color: #ececec;
+    background-color: var(--bg-color);
     --brightShadow: rgba(255, 255, 255, 0.05);
     --dimShadow: rgba(0, 0, 0, 0.4);
     --highContrastBrightShadow: rgba(255, 255, 255, 0.15);
